Refactoring Transitive changes